test/types/tuple/bharshbarg/yieldConst.good
yieldConst.chpl:3: error: illegal lvalue in assignment
