test/types/tuple/bharshbarg/yieldConst.chpl
var x = (1,2,3,4);
for i in x {
  i += 1;
}
writeln(x);
